Fixed global scrollbar

--- a/src/styles/_core.sass
+++ b/src/styles/_core.sass
@@ -61,12 +61,3 @@ $colors: ("white": ($white, $black), "black": ($black, $white),	"light": ($light
 
 	&:active
 		margin-top: 1px
-
-@mixin pretty-scrollbar
-	::-webkit-scrollbar
-		width: 12px
-		height: 12px
-
-	::-webkit-scrollbar-thumb
-		border-radius: 0
-		background-color: $scheme-main-ter
